# VectorizingExampleBasedCoding

./: .gitignore  README.md  pyproject.toml
src/: main.py  matching_elements.csv  train_data.csv
src/VectorBasedCoding/: __init__.py
src/model/: model.pth
